# KokkosDslash

./: CMakeLists.txt
build_kokkoscuda/: configure.sh
include/: kokkos_defaults.h
lib/: CMakeLists.txt
test/: CMakeLists.txt  test_kokkos.cpp
